JDK 11 port: mechanical desugaring (text blocks, String.formatted, Stream.toList, @Serial, sealed)
Generated by a JavaParser-based tool (range-based textual splicing, no reformatting):
- text blocks -> string concatenation with the exact same value
- "...".formatted(args) -> String.format("...", args)
- stream.toList() -> stream.collect(Collectors.toList())
- @java.io.Serial annotations removed
- sealed/non-sealed/permits removed