@@ -154,7 +154,7 @@ public interface Retainable
         @Override
         public String toString()
         {
-            return "%s@%x[%s]".formatted(TypeUtil.toShortName(getClass()), hashCode(), getWrapped());
+            return String.format("%s@%x[%s]", TypeUtil.toShortName(getClass()), hashCode(), getWrapped());
         }
     }
 
