@@ -193,7 +193,7 @@ public class ServerQuicheSession extends QuicheSession implements CyclicTimeouts
         @Override
         public String toString()
         {
-            return "%s@%x".formatted(TypeUtil.toShortName(getClass()), hashCode());
+            return String.format("%s@%x", TypeUtil.toShortName(getClass()), hashCode());
         }
     }
 }
