@@ -176,7 +176,7 @@ public class MemoryConnector extends AbstractConnector
 
     private class MemorySocketAddress extends SocketAddress
     {
-        private final String address = "[memory:@%x]".formatted(System.identityHashCode(MemoryConnector.this));
+        private final String address = String.format("[memory:@%x]", System.identityHashCode(MemoryConnector.this));
 
         @Override
         public boolean equals(Object obj)
