@@ -153,7 +153,7 @@ public class SizeLimitHandler extends Handler.Wrapper
                 if (_responseLimit >= 0 && (_written + content.remaining())  > _responseLimit)
                 {
                     _failure = new HttpException.RuntimeException(HttpStatus.INTERNAL_SERVER_ERROR_500,
-                        "Response body is too large: %d>%d".formatted(_written + content.remaining(), _responseLimit));
+                        String.format("Response body is too large: %d>%d", _written + content.remaining(), _responseLimit));
                     callback.failed(_failure);
                     return;
                 }
