@@ -235,12 +235,10 @@ public class ContextHandlerTest
         });
         _server.start();
 
-        String rawRequest = """
-            GET /ctx/ HTTP/1.1
-            Host: local
-            Connection: close
-            
-            """;
+        String rawRequest = "GET /ctx/ HTTP/1.1\n" +
+            "Host: local\n" +
+            "Connection: close\n" +
+            "\n";
 
         String rawResponse = connector.getResponse(rawRequest);
         HttpTester.Response response = HttpTester.parseResponse(rawResponse);
@@ -301,12 +299,10 @@ public class ContextHandlerTest
         });
         _server.start();
 
-        String rawRequest = """
-            GET /ctx/ HTTP/1.1
-            Host: local
-            Connection: close
-            
-            """;
+        String rawRequest = "GET /ctx/ HTTP/1.1\n" +
+            "Host: local\n" +
+            "Connection: close\n" +
+            "\n";
 
         String rawResponse = connector.getResponse(rawRequest);
         HttpTester.Response response = HttpTester.parseResponse(rawResponse);
@@ -1335,7 +1331,7 @@ public class ContextHandlerTest
         {
             for (int batch = 0; batch <= 1; batch++)
             {
-                LocalConnector.LocalEndPoint endPoint = connector.executeRequest("GET /ctx%s%d HTTP/1.0\r\n\r\n".formatted(target, batch));
+                LocalConnector.LocalEndPoint endPoint = connector.executeRequest(String.format("GET /ctx%s%d HTTP/1.0\r\n\r\n", target, batch));
                 endPoints.add(endPoint);
             }
         }
@@ -1411,19 +1407,17 @@ public class ContextHandlerTest
 
         String dump = contextHandler.dump().replaceAll("\\r?\\n", "\n");
         assertThat(dump, containsString("oejsh.ContextHandler@"));
-        String expected = """
-            +> No ClassLoader
-            +> handler attributes size=3
-            |  +> name: hidden
-            |  +> persistent1: value1
-            |  +> persistent2: named: value2
-            +> attributes size=5
-               +> name: override
-               +> persistent1: value1
-               +> persistent2: named: value2
-               +> transient1: value1
-               +> transient2: named: value2
-            """;
+        String expected = "+> No ClassLoader\n" +
+            "+> handler attributes size=3\n" +
+            "|  +> name: hidden\n" +
+            "|  +> persistent1: value1\n" +
+            "|  +> persistent2: named: value2\n" +
+            "+> attributes size=5\n" +
+            "   +> name: override\n" +
+            "   +> persistent1: value1\n" +
+            "   +> persistent2: named: value2\n" +
+            "   +> transient1: value1\n" +
+            "   +> transient2: named: value2\n";
         assertThat(dump, containsString(expected));
     }
 }
