@@ -14,7 +14,6 @@
 package org.eclipse.jetty.ee9.security.authentication;
 
 import java.io.IOException;
-import java.io.Serial;
 import java.net.URI;
 import java.nio.ByteBuffer;
 import java.security.GeneralSecurityException;
@@ -223,17 +222,17 @@ public class DigestAuthenticator extends LoginAuthenticator
 
             // RFC 7616[3.3]: only realm, domain, nonce, opaque, and qop must be quoted.
             // Parameters stale and algorithm must not be quoted.
-            String value = "Digest realm=\"%s\"".formatted(_loginService.getName());
+            String value = String.format("Digest realm=\"%s\"", _loginService.getName());
             if (!isProxyMode())
-                value += ", domain=\"%s\"".formatted(domain);
+                value += String.format(", domain=\"%s\"", domain);
             String nonce = newNonce(baseRequest);
-            value += ", nonce=\"%s\"".formatted(nonce);
-            value += ", opaque=\"%s\"".formatted(newOpaque(nonce));
-            value += ", stale=%s".formatted(stale);
-            value += ", algorithm=%s".formatted(getAlgorithm());
+            value += String.format(", nonce=\"%s\"", nonce);
+            value += String.format(", opaque=\"%s\"", newOpaque(nonce));
+            value += String.format(", stale=%s", stale);
+            value += String.format(", algorithm=%s", getAlgorithm());
             value += ", qop=\"auth\"";
             value += ", charset=UTF-8";
-            value += ", userhash=%s".formatted(isUserHashing());
+            value += String.format(", userhash=%s", isUserHashing());
             response.setHeader(getChallengeHeader().asString(), value);
 
             response.sendError(getUnauthorizedStatusCode());
@@ -550,7 +549,6 @@ public class DigestAuthenticator extends LoginAuthenticator
     // reference to the outer class, that would make it non-serializable.
     private static class Digest extends Credential
     {
-        @Serial
         private static final long serialVersionUID = -2484639019549527724L;
 
         private final String method;
@@ -628,7 +626,7 @@ public class DigestAuthenticator extends LoginAuthenticator
         @Override
         public String toString()
         {
-            return "%s@%x[u=%s]".formatted(TypeUtil.toShortName(getClass()), hashCode(), resolvedUserName);
+            return String.format("%s@%x[u=%s]", TypeUtil.toShortName(getClass()), hashCode(), resolvedUserName);
         }
     }
 }
